<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="contactsIconLabel">Contacts</string>
    <string name="contactsFavoritesLabel">Favorites</string>
    <string name="dialerIconLabel">Dialer</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="recentCallsIconLabel">Call log</string>
    <string name="fdnListLabel">FDN list</string>
	<string name="simple_call_dialog">Call Dialog</string>
    <string name="call_deflect_dialog">Call Deflection</string>
    <string name="call_deflect_dialog_message">Enter phone number</string>
	<string name="call_transfer_in_progress">Call is transferring...</string>
    <string name="deflect">Deflect</string>
    <string name="transfer">Transfer</string>
    <string name="incall_error_supp_service_deflection">Unable to deflect call.</string>
    <string name="menu_deflect">Deflect</string>
	<string name="wrong_cont_numb">Contact number is wrong</string>
	<string name="empty_call_number">Please, enter phone number</string>
	<string name="call_transfer_dialog">Call Transfer</string>
    <string name="incall_error_supp_service_transfer">Unable to transfer call.</string>
	<string name="menu_transfer">Transfer</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Pay phone</string>
    <string name="onHold">On hold</string>
    <string name="ongoing">Current call</string>
    <string name="callFailed_userBusy">Line busy</string>
    <string name="callFailed_congestion">Network busy</string>
    <string name="callFailed_noSignal">No signal</string>
    <string name="callFailed_limitExceeded">ACM limit exceeded</string>
    <string name="callFailed_powerOff">Radio off</string>
    <string name="callFailed_simError">No SIM, or SIM error</string>
    <string name="callFailed_outOfService">Out of service area</string>
    <string name="callFailed_fdn_only">Outgoing calls are restricted by FDN.</string>
    <string name="callFailed_cb_enabled">You cannot make outgoing calls while call barring is on.</string>
    <string name="callFailed_dsac_restricted">All calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_emergency">Emergency calls are restricted by access control.</string>
    <string name="callFailed_dsac_restricted_normal">Normal calls are restricted by access control.</string>
    <string name="callFailed_cdma_lockedUntilPowerCycle">CDMA: Phone locked until power cycle.</string>
    <string name="callFailed_cdma_drop">CDMA: Call dropped.</string>
    <string name="callFailed_cdma_intercept">CDMA: Call intercepted.</string>
    <string name="callFailed_cdma_reorder">CDMA: reorder.</string>
    <string name="callFailed_cdma_SO_reject">CDMA: Service Option Reject.</string>
    <string name="callFailed_cdma_retryOrder">CDMA: retry order.</string>
    <string name="callFailed_cdma_accessFailure">CDMA: Access failure.</string>
    <string name="callFailed_cdma_preempted">CDMA: Preempted.</string>
    <string name="callFailed_cdma_notEmergency">Only Emergency calls are possible.</string>
    <string name="confCall">Conference call</string>
    <string name="call_lost">Call has been lost.</string>
    <string name="retry">Retry</string>
    <string name="call_lost_title">Call Lost</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">Waiting\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="menu_speaker">Speaker</string>
    <string name="menu_bluetooth">Bluetooth</string>
    <string name="menu_mute">Mute</string>
    <string name="menu_hold">Hold</string>
    <string name="menu_unhold">Unhold</string>
    <string name="menu_endCall">End call</string>
    <string name="menu_swapCalls">Swap calls</string>
    <string name="menu_mergeCalls">Merge calls</string>
    <string name="menu_addCall">Add call</string>
    <string name="menu_manageConference">Manage conference call</string>
    <string name="menu_showDialpad">Show dialpad</string>
    <string name="menu_hideDialpad">Hide dialpad</string>
    <string name="menu_newAccount">New Account</string>
    <string name="menu_addAccount">Add Account</string>
    <string name="menu_vocieCall">Voice Call</string>
    <string name="menu_videoCall">Video Call</string>
    <string name="menu_message">Message</string>
    <string name="menu_answerAndHold">Hold current call\n&amp; answer</string>
    <string name="menu_answerAndEnd">End current call\n&amp; answer</string>
    <string name="ok">OK</string>
    <string name="menuButtonHint">Press Menu for call options.</string>
    <string name="menuButtonKeyboardDialHint">"Press Menu for call options  \u2022  Use keyboard to dial"</string>
    <string name="menu_answer">Answer</string>
    <string name="menu_ignore">Ignore</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending Tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace the wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="dialer_emptyListWorking">Loading\u2026</string>
    <string name="enterPin">Type PIN code to unlock SIM card.</string>
    <string name="pinUnlocked">SIM unlocked</string>
    <string name="enterNewPin">New SIM PIN code</string>
    <string name="verifyNewPin">Type new SIM PIN code again to confirm</string>
    <string name="verifyFailed">The SIM PINs you typed do not match. Please try again.</string>
    <string name="enterPuk">Type PUK code to unlock SIM card</string>
    <string name="badPuk">Incorrect PUK code!</string>
    <string name="buttonTxtContinue">Continue</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="imei">IMEI</string>
    <string name="meid">MEID</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="qos_profiles">QoS Profiles</string>
    <string name="pdp_mode_settings">Data connectivity mode</string>
    <string name="pdp_mode_when_needed_alert">Data connection will be established only when it requested by application</string>
    <string name="pdp_mode_aways_off_alert">Data connectivity is disabled</string>
    <string name="settings_label">Network settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="networks">Network operators</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="labelAR">Automatic redial</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="sum_ar_enabled">Set automatic redial to ON/OFF</string>
    <string name="sum_ar_disabled">Set automatic redial to ON/OFF</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to {0}</string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Disabled</string>
    <string name="labelCFB">Forward when busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to {0}</string>
    <string name="sum_cfb_disabled">Disabled</string>
    <string name="disable_cfb_forbidden">Your carrier does not support disabling call-forwarding when your phone is busy.</string>
    <string name="labelCFNRy">Forward when unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to {0}</string>
    <string name="sum_cfnry_disabled">Disabled</string>
    <string name="disable_cfnry_forbidden">Your carrier does not support disabling call-forwarding when your phone doesn\'t answer.</string>
    <string name="sum_carrier_select">Select a network operator</string>
    <string name="prefer_2g">Use only 2G networks</string>
    <string name="prefer_2g_summary">Saves battery</string>
    <string name="enter_pin2_text">PIN2</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="network_lable">Network ID</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="browse_button">Network list</string>
    <string name="rat_gsm">GSM</string>
    <string name="rat_umts">UMTS</string>
    <string name="call_cost_credit">Credit</string>
    <string name="call_cost_last_call">Last call</string>
    <string name="call_cost_total_costs">Total call cost</string>
    <string name="call_cost_settings">Settings</string>
    <string name="last_call_menu">Last call</string>
    <string name="all_calls_menu">All calls</string>
    <string name="last_call_clear">Reset last call meter</string>
    <string name="call_cost_clear">Reset all calls</string>
    <string name="call_cost_set_credit">Set limit</string>
    <string name="call_cost_set_tariff">Set call cost</string>
    <string name="call_cost_settings_info">Credit, Tariff, etc</string>
    <string name="call_cost_set_limit_off">Off</string>
    <string name="labelSL">Select line</string>
    <string name="select_line_preference_key">select_line_preference_key</string>
	<string name="str_delete">Delete</string>
	<string name="str_cancel">Cancel</string>
	<string name="str_no_messages">No messages</string>
 	<string name="str_new_message">New Message</string>
	<string name="incallmenu_Contact">Contacts</string>
	<string name="incallmenu_memo">Memo</string>
	<string name="incallmenu_Sms">Message</string>
    <string name="title_call_waiting_vib">Call Waiting Notification</string>
    <string name="summary_call_waiting_vib">Set Call Waiting Notification with sound or vibration</string>
</resources>