<?xml version="1.0" encoding="utf-8"?>
<!-- LGE_CALL_COSTS START -->
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Rearranged to use EditPinPreference -->
    <com.android.phone.EditPinPreference 
        android:key="button_clear_last_call_key" 
        android:persistent="false"
        android:dialogMessage="@string/enter_pin2_text"
        android:dialogTitle="@string/last_call_clear"
        android:title="@string/last_call_menu"/>
        
    <com.android.phone.EditPinPreference 
        android:key="button_clear_call_cost_key" 
        android:persistent="false"
        android:dialogMessage="@string/enter_pin2_text"
        android:dialogTitle="@string/call_cost_clear"
        android:title="@string/all_calls_menu"/>        


    <PreferenceScreen
        android:key="button_set_tariff_key" 
        android:title="@string/call_cost_set_tariff"
        android:persistent="false">      
               
        <!-- Intent to launch the Call Cost Set Call Cost -->
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CallCostSetTariffPreference" />
    </PreferenceScreen>
        

    <PreferenceScreen
        android:key="button_set_credit_key" 
        android:title="@string/call_cost_set_credit"
        android:summary="@string/call_cost_set_limit_off"
        android:persistent="false">
        
        <!--  Intent to launch the Call Cost Set Limit -->
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CallCostSetLimitPreference" />
    </PreferenceScreen>
    
</PreferenceScreen>
<!-- LGE_CALL_COSTS END -->