<?xml version="1.0" encoding="utf-8"?>
<!-- LGE_CALL_COSTS START -->
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="button_call_cost_last_call_key"
        android:title="@string/call_cost_last_call"
        android:summary="0.00"
        android:persistent="false"/>

    <Preference
        android:key="button_call_cost_total_costs_key"
        android:title="@string/call_cost_total_costs"
        android:summary="0.00"
        android:persistent="false"/>

    <PreferenceScreen
        android:key="button_call_cost_settings_key"
        android:title="@string/call_cost_settings"
        android:summary="@string/call_cost_settings_info"
        android:persistent="false">

        <!-- Intent to lauch the Call Cost settings. -->
        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.CallCostSettings" />

    </PreferenceScreen>

    <Preference
        android:key="button_call_cost_limit_key"
        android:title="@string/call_cost_credit"
        android:summary="Unlimited"
        android:persistent="false"/>

</PreferenceScreen>
<!-- LGE_CALL_COSTS END -->
