<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.phone">

    <PreferenceScreen
        android:key="button_apn_key"
        android:title="@string/apn_settings"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.settings"
            android:targetClass="com.android.settings.ApnSettings" />

    </PreferenceScreen>

    <com.android.phone.Use2GOnlyCheckBoxPreference
        android:key="button_prefer_2g_key"
        android:title="@string/prefer_2g"
        android:persistent="false"
        android:summary="@string/prefer_2g_summary"/>

    <PreferenceScreen
        android:key="button_carrier_sel_key"
        android:title="@string/networks"
        android:summary="@string/sum_carrier_select"
        android:persistent="false">

        <intent android:action="android.intent.action.MAIN"
            android:targetPackage="com.android.phone"
            android:targetClass="com.android.phone.NetworkSetting" />

    </PreferenceScreen>

<!-- 20101006 jongwany.lee@lge.com blocked this function due to duplication with native code -->
<!-- 20100819 yongsung.kim@lge.com apply Teleca 4th drop code [START]-->
<!-- LGE_MPDP START --><!--	
        <PreferenceScreen   
			android:key="button_qos_key"    
			android:title="@string/qos_profiles"  
			android:persistent="false">    
        <intent android:action="android.intent.action.MAIN"   
                        android:targetPackage="com.android.settings"   
			            android:targetClass="com.android.settings.QosProfileSettings" />  
        </PreferenceScreen>
--><!-- LGE_MPDP END -->

<!-- 20101006 jongwany.lee@lge.com blocked this function due to duplication with native code -->
<!-- LGE_PDP_MODE START --><!--
	    <ListPreference	 
			android:key="mpdp_mode_key"   
			android:title="@string/pdp_mode_settings"   
			android:dialogTitle="@string/pdp_mode_settings"   
			android:persistent="false"   
			android:entries="@array/pdp_mode_items"  
			android:entryValues="@array/pdp_mode_values"/>   
--><!-- LGE_PDP_MODE END -->
<!-- 20100819 yongsung.kim@lge.com apply Teleca 4th drop code [END]-->

</PreferenceScreen>
